[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mayaunittest"
version = "0.1.0"
description = "Unittest utilities for Autodesk Maya"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "David Lantos" }]

requires-python = ">=3.7"

dependencies = []

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]